// Copyright 2023 Salesforce, Inc. All rights reserved.
syntax = "proto3";

package auth;

service AuthService {
    rpc Check (AuthRequest) returns (AuthResponse);
}

message AuthRequest {
    string token = 1;
}

message AuthResponse {
    bool active = 1;
    optional uint64 exp = 2;
    optional uint64 nbf = 3;
}
